--- a/src/main/resources/templates/analytics-main.html
+++ b/src/main/resources/templates/analytics-main.html
@@ -269,7 +269,6 @@
                                     </div>
                                 </div>
 
-
                                 <!-- Highest Revenue Categories -->
                                 <div class="row">
                                     <div class="col-12 grid-margin">
@@ -364,7 +363,6 @@
                                         </div>
                                     </div>
                                 </div>
-
 
                                 <!-- Most Ordered Products -->
                                 <div class="row">
@@ -484,7 +482,7 @@
         </div>
     </div>
 </div>
-<!-- container-scroller -->
+<!-- container-scroller --\
 <!-- plugins:js -->
 <script th:src="@{/assets/vendors/js/vendor.bundle.base.js}"></script>
 <!-- endinject -->
