--- a/src/main/resources/templates/payment-success.html
+++ b/src/main/resources/templates/payment-success.html
@@ -35,7 +35,7 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); /* Hiệu ứng bóng đổ */
             height: 400px; /* Chiều cao tự động điều chỉnh theo nội dung */
             display: flex;
-            flex-direction: column;
+            flex-direction: column;0
             justify-content: center;
             align-items: center;
         }
