--- a/src/main/resources/templates/product-detail.html
+++ b/src/main/resources/templates/product-detail.html
@@ -51,7 +51,7 @@
         <div class="img">
             <img th:src="${product.getImageLink()}"
                  th:alt="${product.title}"
-                 style="height: 400px; width: 400px">
+                 style="background-image: none !important">
         </div>
         <div class="next-to-img">
 <!--            <a th:href="@{/home}" id="back">Home page/</a><br><br>-->
