--- a/src/main/resources/static/css/product-detail.css
+++ b/src/main/resources/static/css/product-detail.css
@@ -7,8 +7,24 @@
     align-items: center;
     background-image: linear-gradient(to bottom, #fcfafa, #f6c1c1);
 }
-.img{
+.img {
+    width: 400px;
+    height: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
     margin-right: 30px;
+    background-color: linear-gradient(to bottom, #fcfafa, #f6c1c1);
+}
+
+.img img {
+    max-width: 100%;
+    max-height: 100%;
+    width: auto;
+    height: auto;
+    display: block;
+    mix-blend-mode: multiply;
 }
 #button-add-product-to-cart{
     border: none;
