--- a/src/main/resources/templates/analytics-category-detail.html
+++ b/src/main/resources/templates/analytics-category-detail.html
@@ -40,7 +40,7 @@
     <nav class="navbar default-layout-navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
         <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-center">
             <a class="navbar-brand brand-logo" href="index.html"><img th:src="@{/assets/images/logo.svg}" alt="logo" /></a>
-            <a class="navbar-brand brand-logo-mini" href="index.html"><img th:src="@{/assets/images/logo-mini.svg}" alt="logo" /></a>
+            <a -class="navbar-brand brand-logo-mini" href="index.html"><img th:src="@{/assets/images/logo-mini.svg}" alt="logo" /></a>
         </div>
         <div class="navbar-menu-wrapper d-flex align-items-stretch">
             <button class="navbar-toggler navbar-toggler align-self-center" type="button" data-toggle="minimize">
@@ -140,7 +140,7 @@
                                     </div>
                                 </div>
 
-                                <!-- Category with order status count -->
+<!-- Category with order status count -->
                                 <div class="row">
                                     <div class="col-12 grid-margin">
                                         <div class="card">
